// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/breadcrumb/demo/basic.md correctly 1`] = `
<div
  class="wmstool-breadcrumb"
>
  <span>
    <span
      class="wmstool-breadcrumb-link"
    >
      Home
    </span>
    <span
      class="wmstool-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="wmstool-breadcrumb-link"
    >
      <a
        href=""
      >
        Application Center
      </a>
    </span>
    <span
      class="wmstool-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="wmstool-breadcrumb-link"
    >
      <a
        href=""
      >
        Application List
      </a>
    </span>
    <span
      class="wmstool-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="wmstool-breadcrumb-link"
    >
      An Application
    </span>
    <span
      class="wmstool-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;

exports[`renders ./components/breadcrumb/demo/router.md correctly 1`] = `
<div
  class="demo"
>
  <div
    class="demo-nav"
  >
    <a
      href="#/"
    >
      Home
    </a>
    <a
      href="#/apps"
    >
      Application List
    </a>
  </div>
  Home Page
  <div
    class="wmstool-alert wmstool-alert-info wmstool-alert-no-icon"
    data-show="true"
    style="margin:16px 0;"
  >
    <span
      class="wmstool-alert-message"
    >
      Click the navigation above to switch:
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
  <div
    class="wmstool-breadcrumb"
  >
    <span>
      <span
        class="wmstool-breadcrumb-link"
      >
        <span>
          Home
        </span>
      </span>
      <span
        class="wmstool-breadcrumb-separator"
      >
        /
      </span>
    </span>
  </div>
</div>
`;

exports[`renders ./components/breadcrumb/demo/router-4.md correctly 1`] = `
<div
  class="demo"
>
  <div
    class="demo-nav"
  >
    <a
      href="#/"
    >
      Home
    </a>
    <a
      href="#/apps"
    >
      Application List
    </a>
  </div>
  Home Page
  <div
    class="wmstool-alert wmstool-alert-info wmstool-alert-no-icon"
    data-show="true"
    style="margin:16px 0;"
  >
    <span
      class="wmstool-alert-message"
    >
      Click the navigation above to switch:
    </span>
    <span
      class="wmstool-alert-description"
    />
  </div>
  <div
    class="wmstool-breadcrumb"
  />
</div>
`;

exports[`renders ./components/breadcrumb/demo/separator.md correctly 1`] = `
<div
  class="wmstool-breadcrumb"
>
  <span>
    <span
      class="wmstool-breadcrumb-link"
    >
      Home
    </span>
    <span
      class="wmstool-breadcrumb-separator"
    >
      &gt;
    </span>
  </span>
  <span>
    <a
      class="wmstool-breadcrumb-link"
      href=""
    >
      Application Center
    </a>
    <span
      class="wmstool-breadcrumb-separator"
    >
      &gt;
    </span>
  </span>
  <span>
    <a
      class="wmstool-breadcrumb-link"
      href=""
    >
      Application List
    </a>
    <span
      class="wmstool-breadcrumb-separator"
    >
      &gt;
    </span>
  </span>
  <span>
    <span
      class="wmstool-breadcrumb-link"
    >
      An Application
    </span>
    <span
      class="wmstool-breadcrumb-separator"
    >
      &gt;
    </span>
  </span>
</div>
`;

exports[`renders ./components/breadcrumb/demo/withIcon.md correctly 1`] = `
<div
  class="wmstool-breadcrumb"
>
  <span>
    <a
      class="wmstool-breadcrumb-link"
      href=""
    >
      <i
        class="anticon anticon-home"
      />
    </a>
    <span
      class="wmstool-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <a
      class="wmstool-breadcrumb-link"
      href=""
    >
      <i
        class="anticon anticon-user"
      />
      <span>
        Application List
      </span>
    </a>
    <span
      class="wmstool-breadcrumb-separator"
    >
      /
    </span>
  </span>
  <span>
    <span
      class="wmstool-breadcrumb-link"
    >
      Application
    </span>
    <span
      class="wmstool-breadcrumb-separator"
    >
      /
    </span>
  </span>
</div>
`;
